2008-04-08  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  add the cheese 2.22.1 release

2008-04-06  Dave Neary <bolsh@gnome.org>

	* www.gnome.org/press/releases/2008-04-mobilesummit.wml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml: add press release about
	GNOME Mobile summit in Austin next week.

2008-03-04  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/projects/outreach/a11y/index.wml: add line break on
	news entry.

2008-03-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/friends/index.wml: update foundation address

2008-03-02  Joergen Scheibengruber  <mfcn@gmx.de>

	* www.gnome.org/projects/netspeed/*: Added netspeed websites
	* www.gnome.org/projects/Makefile.am: Added netspeed to SUBDIRS
	* configure.in: Added netspeed to AC_OUTPUT

2008-03-02  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/projects/outreach/a11y/tasks/index.wml,
	www.gnome.org/projects/outreach/a11y/tasks/evince/index.wml: fix
	typos.

2008-03-01  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/friends/donors_2007.wml: add missing donator

2008-03-01  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: Remove the 2.12 - 2.18 release notes as these are
	available in the release-notes repos from now on.
        * www.gnome.org/press/releases/Makefile.am:

2008-04-02  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/index.wml: 
	  add the new cheese description

2008-04-02  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  remove the april fools joke

2008-04-01  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  add the patent violation news entry

2008-03-24  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: change order of redirecto to get the ics
	redirect working... At least, to try to have it working :-)
