@@ -4,7 +4,7 @@ html, body
   padding: 0;
   background-color: white;
   font-family: sans-serif;
-  font-size: 10pt;
+  font-size: small;
   color: black;
 }
 
