@@ -26,7 +26,7 @@
 #body h2
 {
   border-bottom: 1px solid #99c;
-  font-size: 110%;
+  font-size: 120%;
 }
 
 #body h3, #body h3 a
@@ -202,6 +202,10 @@ div.code
   margin: 5px 5px 5px 2em;
 }
 
+.tour-item
+{
+  min-height: 160px;
+}
 
 #warningbox
 {
