@@ -40,7 +40,7 @@
 
         <div id="left" style="padding-left: 1%;">
 
-          <div>
+          <div class="tour-item">
             <h2>Cheese!</h2>
             <div class="imager">
               <img src="data/tour/cheese-main.jpg" alt="icon" />
@@ -55,7 +55,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="tour-item">
             <h2>Add Cheesy Effects</h2>
             <div class="imagel">
               <img src="data/tour/cheese-effects.jpg" alt="icon" />
@@ -70,7 +70,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="tour-item">
             <h2>Go to Hollywood</h2>
             <div class="imager">
               <img src="data/tour/cheese-video.jpg" alt="icon" />
@@ -90,7 +90,7 @@
 
         <div id="right" style="padding-right: 1%;">
 
-          <div>
+          <div class="tour-item">
             <h2>3... 2... 1... Cheese!</h2>
             <div class="imager">
               <img src="data/tour/cheese-countdown.jpg" alt="icon" />
@@ -105,7 +105,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="tour-item">
             <h2>Share your Photos and Videos</h2>
             <div class="imagel">
               <img src="data/tour/cheese-share.jpg" alt="icon" />
@@ -119,7 +119,7 @@
             </p>
           </div>
 
-          <div>
+          <div class="tour-item">
             <h2>Endless Possibilities</h2>
             <div class="imager">
               <img src="data/tour/cheese-about.jpg" alt="icon" />
