@@ -1,3 +1,10 @@
+2008-04-13  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/data/themes/cheese/document.all.css,
+	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
+	  www.gnome.org/projects/cheese/tour.html: 
+	  small css changes on the cheese page
+
 2008-04-08  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/download.html,
